   * Plugins: Dummy, ArtNet, ShowNet, ESP Net, SandNet, Pathport, OSC, KiNet
   * Python bindings
   Not working yet:
   * all other plugins, especially device-based ones (USB, serial, SPI)
   * Java bindings
 * Use the PID (process ID) and current time to init the random seed - #227
 * Standardise some flags, using --device consistently. This affects
   ola_artnet, ola_e131 and ola_usbpro

 Bugs:
 * Don't build ola_protoc if --with-ola-protoc= is provided.
 * Fix the inter-test delay in the RDM tests to work with values less than 1s.

 Internal:
 * Changed to a non-recursive build. Reduced build times by 5-25%.
 * Convert more of our programs to our flags module

21/6/2014 ola-0.9.1
 Features:
 * Pretty print IPV4 addresses within the Python RDM code.
 * Add some additional slot definitions and status messages.
 * Add a timestamp to model data filenames so they're unique.
 * Allow OSC ports to be looped.
 * Add the ability to reload plugins via RPC.
 * Added a plugin which uses the onboard UART.
 * Added a Python fade controller demo.

 API:
 * Change GetIdentifyMode to GetIdentifyDevice in the RDM API to clarify it's
   the IDENTIFY_DEVICE PID not the newer IDENTIFY_MODE one.

 RDM Tests:
 * Added the inter-test delay option to the Web UI.
 * Show transaction numbers in the responder tests to aid debugging
 * Don't warn about unknown slot definitions if they are manufacturer ones
 * Added a number of missing Get...WithData tests.

 Bugs:
 * Fix sensor numbering from 0 on web UI so it matches CLI
 * Fix the minimum and maximum level supported RDM tests
 * Stop the Python client throwing an AttributeError if the universe doesn't
   exist.
 * Ensure the RDM Model Collector works if the fixture doesn't have personality
   descriptions.
 * Only try and fetch supported params for manufacturer PIDs in the model
   collector.
 * Fix an issue with strings in hash maps on OS X 10.5
 * Ensure Rpc_pb2.py is always built.