@@ -2,25 +2,34 @@
 .SH NAME
 ola_artnet \- Configure ArtNet devices managed by OLA.
 .SH SYNOPSIS
-.B ola_artnet [ options ]
+.B ola_artnet
+-d <device_id> -n <name> -l <long_name> -s <subnet>
 .SH DESCRIPTION
 .B ola_artnet
 is used to configure ArtNet devices managed by OLA.
 .SH OPTIONS
-.IP "-h, --help"
-Display the help message.
-.IP "-d, --dev <device>"
+.IP "-d, --device <device>"
 Id of the ArtNet device to configure.
 .IP "-e, --net <network>"
 Set the net parameter of the ArtNet device.
-.IP "-l, --long-name <long-name>"
-Set the long name of the ArtNet device.
+.IP "-h, --help"
+Display the help message
+.IP "-l, --log-level <int8_t>"
+Set the logging level 0 .. 4.
 .IP "-n, --name <name>"
 Set the name of the ArtNet device.
 .IP "-s, --subnet <subnet>"
 Set the subnet parameter of the ArtNet device.
 .IP "-u, --universe <universe-id>"
 List the IPs of ArtNet devices for this universe.
+.IP "-v, --version"
+Display version information
+.IP "--long-name <long-name>"
+Set the long name of the ArtNet device.
+.IP "--syslog"
+Send to syslog rather than stderr.
+.IP "--use-epoll"
+Use epoll() if available
 .SH SEE ALSO
 .BR olad(1) ,
 .
