@@ -19,6 +19,8 @@ x/y/2014 ola-0.9.2
  * Use the PID (process ID) and current time to init the random seed - #227
  * Standardise some flags, using --device consistently. This affects
    ola_artnet, ola_e131 and ola_usbpro
+ * Remove -l long name short option from ola_artnet as it clashes with the
+   global -l log level option.
 
  Bugs:
  * Don't build ola_protoc if --with-ola-protoc= is provided.
